[gd_scene load_steps=13 format=2]

[ext_resource path="res://Main Menu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/BG/Sky.png" type="Texture" id=2]
[ext_resource path="res://Font/Mario-Kart-DS.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://FlatUI/kenneyUI.tres" type="Theme" id=4]
[ext_resource path="res://FlatUI/kenneyUI-blue.tres" type="Theme" id=5]

[sub_resource type="Shader" id=6]

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )

[sub_resource type="DynamicFont" id=1]
size = 70
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[node name="Main Menu" type="Control"]
material = SubResource( 7 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Sky" type="Sprite" parent="."]
position = Vector2( 384, 240 )
scale = Vector2( 1.97935, 1.21539 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 640.0
margin_bottom = 136.0
rect_min_size = Vector2( 0, 136 )

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer"]
margin_left = 145.0
margin_top = 39.0
margin_right = 495.0
margin_bottom = 97.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.137255, 0.470588, 0.611765, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = -2
custom_fonts/font = SubResource( 1 )
text = "Sky Theme"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_left = 285.0
margin_top = 140.0
margin_right = 354.0
margin_bottom = 259.0
size_flags_horizontal = 4

[node name="StartButton" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_right = 69.0
margin_bottom = 37.251
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="StoryButton" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 69.3241
margin_bottom = 78.251
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 3 )
text = "Story"

[node name="QuitButton" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 69.0
margin_bottom = 119.251
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 4 )
text = "Quit"

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 263.0
margin_right = 640.0
margin_bottom = 360.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer2"]
margin_left = 274.0
margin_top = 42.0
margin_right = 366.0
margin_bottom = 55.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Blair Grant"

[connection signal="pressed" from="VBoxContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/StoryButton" to="." method="_on_StoryButton_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
